RESOLVED FIXED57468
Assertion failure in plug-in process when calling WKPluginSiteDataManagerGetSitesWithData
https://bugs.webkit.org/show_bug.cgi?id=57468
Summary Assertion failure in plug-in process when calling WKPluginSiteDataManagerGetS...
Anders Carlsson
Reported 2011-03-30 09:35:25 PDT
Assertion failure in plug-in process when calling WKPluginSiteDataManagerGetSitesWithData
Attachments
Patch (2.63 KB, patch)
2011-03-30 09:36 PDT, Anders Carlsson
aroben: review+
Anders Carlsson
Comment 1 2011-03-30 09:36:31 PDT
Jessie Berlin
Comment 2 2011-03-30 09:40:34 PDT
Comment on attachment 87551 [details] Patch r would= me, but I am not a reviewer yet. Looks good!
Anders Carlsson
Comment 3 2011-03-30 10:01:13 PDT
Note You need to log in before you can comment on or make changes to this bug.