2011-03-30  Anders Carlsson  <andersca@apple.com>

Reviewed by Adam Roben.

        Assertion failure in plug-in process when calling WKPluginSiteDataManagerGetSitesWithData
        https://bugs.webkit.org/show_bug.cgi?id=57468
        <rdar://problem/9199089>

        Call decrementLoadCount from removeWebProcessConnection instead of startShutdownTimerIfNecessary,
        otherwise we'll get a load count underflow when a connection is never created.

        * PluginProcess/PluginProcess.cpp:
        (WebKit::PluginProcess::removeWebProcessConnection):
        (WebKit::PluginProcess::createWebProcessConnection):
        (WebKit::PluginProcess::startShutdownTimerIfNecessary):


Canonical link: https://commits.webkit.org/72258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82460 268f45cc-cd09-0410-ab3c-d52691b4dbfc